<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            tools:context=".ui.registration.RegisterInfoActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_16">

            <ImageView
                    android:id="@+id/banner"
                    android:layout_width="0dp"
                    android:layout_height="260dp"
                    android:src="@drawable/banner"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/description_bg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/img_profile"
                    android:layout_width="@dimen/avatar_width"
                    android:layout_height="@dimen/avatar_height"
                    tools:src="@drawable/ic_user"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/colorPrimary"
                    app:civ_shadow_radius="4"
                    android:shadowColor="@color/colorPrimaryDark"
                    android:visibility="invisible"
                    android:onClick="onClickPickUserImage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/banner"/>

            <ImageButton
                    android:id="@+id/btn_choose_photo"
                    android:layout_width="@dimen/avatar_width"
                    android:layout_height="@dimen/avatar_height"
                    android:background="@drawable/shape_circle"
                    app:srcCompat="@drawable/ic_camera"
                    android:contentDescription="@string/description_ic_camera"
                    android:onClick="onClickPickUserImage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/banner"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/banner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/til_email">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="10dp"
                        android:inputType="text"
                        android:hint="@string/hint_name"
                        android:gravity="center_vertical"
                        android:drawableStart="@drawable/ic_account"
                        android:drawableLeft="@drawable/ic_account"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/til_age">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="10dp"
                        android:inputType="textEmailAddress"
                        android:hint="@string/hint_email"
                        android:gravity="center_vertical"
                        android:drawableStart="@drawable/ic_email"
                        android:drawableLeft="@drawable/ic_email"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_age"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/til_phone">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_age"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="10dp"
                        android:inputType="numberDecimal"
                        android:hint="@string/hint_age"
                        android:gravity="center_vertical"
                        android:drawableStart="@drawable/ic_age"
                        android:drawableLeft="@drawable/ic_age"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_age"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/btn_register">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="10dp"
                        android:inputType="phone"
                        android:hint="@string/hint_phone"
                        android:gravity="center_vertical"
                        android:drawableStart="@drawable/ic_phone"
                        android:drawableLeft="@drawable/ic_phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:id="@+id/btn_register"
                    style="@style/ActionButton.Large"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginLeft="@dimen/margin_16"
                    android:text="@string/label_registration"
                    android:onClick="onClickRegistration"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_phone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>