<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            tools:context=".ui.registration.RegisterInfoActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_16">

            <ImageView
                    android:id="@+id/banner"
                    android:layout_width="0dp"
                    android:layout_height="260dp"
                    android:src="@drawable/banner"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/description_bg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/img_profile"
                    android:layout_width="@dimen/avatar_width"
                    android:layout_height="@dimen/avatar_height"
                    tools:src="@drawable/ic_user"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/colorPrimary"
                    app:civ_shadow_radius="4"
                    android:shadowColor="@color/colorPrimaryDark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/banner"/>

            <TextView
                    android:id="@+id/label_name"
                    style="@style/LabelText"
                    android:text="@string/label_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/banner"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/TextView"
                    tools:text="Arhan"
                    android:drawableStart="@drawable/ic_account"
                    android:drawableLeft="@drawable/ic_account"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_name"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <View
                android:id="@+id/divider1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                    android:id="@+id/label_email"
                    style="@style/LabelText"
                    android:layout_marginTop="5dp"
                    android:text="@string/label_email"
                    android:onClick="onClickEmail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider1"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/TextView"
                    tools:text="Arhan@g.c"
                    android:drawableStart="@drawable/ic_email"
                    android:drawableLeft="@drawable/ic_email"
                    android:onClick="onClickEmail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/divider2"/>

            <View
                    android:id="@+id/divider2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_email"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                    android:id="@+id/label_age"
                    style="@style/LabelText"
                    android:layout_marginTop="5dp"
                    android:text="@string/label_age"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/tv_age"/>

            <TextView
                    android:id="@+id/tv_age"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/TextView"
                    tools:text="24"
                    android:drawableStart="@drawable/ic_age"
                    android:drawableLeft="@drawable/ic_age"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_age"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/divider3"/>

            <View
                    android:id="@+id/divider3"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_age"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                    android:id="@+id/label_phone"
                    style="@style/LabelText"
                    android:layout_marginTop="5dp"
                    android:text="@string/label_phone"
                    android:onClick="onClickPhone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider3"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/TextView"
                    tools:text="1234567890"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawableLeft="@drawable/ic_phone"
                    android:onClick="onClickPhone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_phone"
                    app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>